--- a/style.css
+++ b/style.css
@@ -23,7 +23,6 @@
     img {
         width: 25vh;
         border-radius: 50%;
-        box-shadow: 3px 3px 10px rgba(255, 255, 255, .3);
         margin-bottom: .5rem;
     }
     
@@ -47,6 +46,7 @@
         align-items: center;
         height: 40vh;
         padding-top: 1rem;
+        transition: .2s;
     }
     
     #name h1 {
@@ -99,6 +99,18 @@
     i {
         font-size: 3.5vh;
         margin-left: 1rem;
+    }
+    
+    #name:hover {
+        background: #f09433;
+        background: -moz-linear-gradient(45deg, rgb(24, 24, 88) 0%, #0a66c2 100%);
+        background: -webkit-linear-gradient(45deg, rgb(24, 24, 88) 0%, #0a66c2 100%);
+        background: linear-gradient(45deg, rgb(24, 24, 88) 0%, #0a66c2 100%);
+        color: white;
+        border-radius: 2rem;
+        transform: translateY(.5em);
+        margin-bottom: .5em;
+        box-shadow: 0em .5em .5em rgba(10, 102, 194, .25);
     }
     
     li:hover {
