--- a/style.css
+++ b/style.css
@@ -30,12 +30,14 @@
         display: flex;
         flex-direction: row;
         justify-content: center;
+        height: 100vh;
     }
     
     #Horz {
         display: flex;
         flex-direction: column;
         justify-content: center;
+        width: 100%;
     }
     
     #name {
@@ -63,6 +65,7 @@
         flex-wrap: wrap;
         justify-content: center;
         align-items: center;
+        width: 100vw;
     }
     
     ul {
@@ -72,6 +75,7 @@
         justify-content: space-evenly;
         align-items: center;
         height: 55vh;
+        width: 100vw;
     }
     
     li {
@@ -82,23 +86,29 @@
         justify-content: space-between;
         border: 1px solid white;
         border-radius: .75em;
-        width: 20rem;
-        height: 3rem;
-        font-size: 2.5vh;
+        width: 40vh;
+        height: 12.5vw;
         font-weight: bold;
         color: white;
         transition: .2s;
+        margin: 0;
     }
     
     li p {
         width: 90%;
-        margin-right: 1.25rem;
         text-align: center;
+        font-size: 2.5vh;
     }
     
-    i {
+    li i {
         font-size: 3.5vh;
-        margin-left: 1rem;
+        margin-left: 5vw;
+    }
+    
+    .envelop {
+        -webkit-mask: url(./images/envelope-solid.svg) no-repeat center;
+        mask: url(./images/envelope-solid.svg) no-repeat center;
+        fill: white;
     }
     
     #name:hover {
