--- a/style.css
+++ b/style.css
@@ -1,20 +1,32 @@
-    @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-    * {
-        margin: 0;
-        padding: 0;
-    }
-    
-    html {
-        height: 100%;
-        background: rgba(19, 25, 37, 1);
-    }
-    
-    body {
-        background: rgba(19, 25, 37, 1);
-        height: 100vh;
-        margin: 0;
-        background-repeat: no-repeat;
-        background-attachment: fixed;
-        font-family: 'Montserrat', sans-serif;
-        color: white;
-    }
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+* {
+    margin: 0;
+    padding: 0;
+}
+
+html {
+    height: 100%;
+    background: rgba(19, 25, 37, 1);
+}
+
+body {
+    background: rgba(19, 25, 37, 1);
+    height: 100vh;
+    margin: 0;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    font-family: 'Montserrat', sans-serif;
+    color: white;
+}
+
+@media (min-width: 993px) {
+    body {}
+}
+
+@media (max-width: 992px) {
+    body {}
+}
+
+@media (max-width: 500px) {
+    body {}
+}
