--- a/style.css
+++ b/style.css
@@ -204,18 +204,19 @@ h3 {
     display: flex;
     flex-direction: row;
     align-items: center;
-    width: 75vw;
+    width: 60vw;
     padding: 1.35vh;
 }
 
 .icon {
     width: 25vw;
+    font-size: 3vh;
 }
 
 .website {
     width: 75vw;
     text-align: center;
-    font-size: large;
+    font-size: 1em;
     font-weight: 700;
 }
 
