Added hover styling

--- a/style.css
+++ b/style.css
@@ -166,6 +166,7 @@ body {
 .ver {
     display: flex;
     flex-direction: column;
+    align-items: center;
     height: 100vh;
     width: 100vw;
 }
@@ -176,8 +177,10 @@ body {
     align-items: center;
     justify-content: space-evenly;
     height: 45vh;
-    font-size: 7vw;
+    width: 65vw;
+    font-size: 4vw;
     font-weight: 700;
+    text-align: center;
 }
 
 .profile h1,
@@ -216,8 +219,65 @@ h3 {
 .website {
     width: 75vw;
     text-align: center;
-    font-size: 1em;
+    font-size: 2vh;
     font-weight: 700;
+}
+
+.profile:hover {
+    background: #f09433;
+    background: -moz-linear-gradient(45deg, rgb(24, 24, 88) 0%, #0a66c2 100%);
+    background: -webkit-linear-gradient(45deg, rgb(24, 24, 88) 0%, #0a66c2 100%);
+    background: linear-gradient(45deg, rgb(24, 24, 88) 0%, #0a66c2 100%);
+    color: white;
+    border-radius: 2rem;
+    transform: translateY(-.75vh);
+    margin-bottom: .5em;
+    box-shadow: 0em .5em .5em rgba(10, 102, 194, .25);
+}
+
+.app:hover {
+    transform: translateY(-.75vh);
+}
+
+.envelope:nth-of-type(1):hover {
+    background-color: white;
+    color: black;
+    box-shadow: 0em .5em .5em rgba(255, 255, 255, .25);
+}
+
+.linkedin:nth-of-type(2):hover {
+    background-color: #0a66c2;
+    color: white;
+    border: #0a66c2;
+    box-shadow: 0em .5em .5em rgba(10, 102, 194, .5);
+}
+
+.github:nth-of-type(3):hover {
+    background-color: white;
+    color: black;
+    box-shadow: 0em .5em .5em rgba(255, 255, 255, .25);
+}
+
+.discord:nth-of-type(4):hover {
+    background-color: #6a80ca;
+    border: 1px solid #6a80ca;
+    box-shadow: 0em .5em .5em rgba(106, 128, 202, .5);
+}
+
+.instagram:nth-of-type(5):hover {
+    background: #f09433;
+    background: -moz-linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
+    background: -webkit-linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
+    background: linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
+    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#f09433', endColorstr='#bc1888', GradientType=1);
+    border: none;
+    box-shadow: 0em .5em .5em rgba(220, 39, 67, .25);
+}
+
+.twitch:nth-of-type(6):hover {
+    border: #9147ff;
+    background-color: #9147ff;
+    box-shadow: 0em .5em .5em rgba(145, 71, 255, .5);
 }
 
 
