--- a/style.css
+++ b/style.css
@@ -225,63 +225,6 @@ h3 {
     font-weight: 700;
 }
 
-.profile:hover {
-    background: #f09433;
-    background: -moz-linear-gradient(45deg, rgb(36, 24, 88) 0%, #0a66c2 100%);
-    background: -webkit-linear-gradient(45deg, rgb(24, 24, 88) 0%, #0a66c2 100%);
-    background: linear-gradient(45deg, rgb(24, 24, 88) 0%, #0a66c2 100%);
-    color: white;
-    border-radius: 2rem;
-    transform: translateY(-.4vh);
-    margin-bottom: .5em;
-    box-shadow: 0em .5em .5em rgba(10, 102, 194, .25);
-}
-
-.app:hover {
-    transform: translateY(-.75vh);
-}
-
-.envelope:nth-of-type(1):hover {
-    background-color: white;
-    color: black;
-    box-shadow: 0em .5em .5em rgba(255, 255, 255, .25);
-}
-
-.linkedin:nth-of-type(2):hover {
-    background-color: #0a66c2;
-    color: white;
-    border: #0a66c2;
-    box-shadow: 0em .5em .5em rgba(10, 102, 194, .5);
-}
-
-.github:nth-of-type(3):hover {
-    background-color: white;
-    color: black;
-    box-shadow: 0em .5em .5em rgba(255, 255, 255, .25);
-}
-
-.discord:nth-of-type(4):hover {
-    background-color: #6a80ca;
-    border: 1px solid #6a80ca;
-    box-shadow: 0em .5em .5em rgba(106, 128, 202, .5);
-}
-
-.instagram:nth-of-type(5):hover {
-    background: #f09433;
-    background: -moz-linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
-    background: -webkit-linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
-    background: linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
-    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#f09433', endColorstr='#bc1888', GradientType=1);
-    border: none;
-    box-shadow: 0em .5em .5em rgba(220, 39, 67, .25);
-}
-
-.twitch:nth-of-type(6):hover {
-    border: #9147ff;
-    background-color: #9147ff;
-    box-shadow: 0em .5em .5em rgba(145, 71, 255, .5);
-}
-
 @media (min-width: 500px) and (max-width: 729px) {
     .profile h1,
     h3 {
@@ -355,22 +298,74 @@ h3 {
     }
 }
 
+@media(max-content: 999px) {
+    .profile:hover {
+        background: #f09433;
+        background: -moz-linear-gradient(45deg, rgb(36, 24, 88) 0%, #0a66c2 100%);
+        background: -webkit-linear-gradient(45deg, rgb(24, 24, 88) 0%, #0a66c2 100%);
+        background: linear-gradient(45deg, rgb(24, 24, 88) 0%, #0a66c2 100%);
+        color: white;
+        border-radius: 2rem;
+        transform: translateY(-.4vh);
+        margin-bottom: .5em;
+        box-shadow: 0em .5em .5em rgba(10, 102, 194, .25);
+    }
+    .app:hover {
+        transform: translateY(-.75vh);
+    }
+    .envelope:nth-of-type(1):hover {
+        background-color: white;
+        color: black;
+        box-shadow: 0em .5em .5em rgba(255, 255, 255, .25);
+    }
+    .linkedin:nth-of-type(2):hover {
+        background-color: #0a66c2;
+        color: white;
+        border: #0a66c2;
+        box-shadow: 0em .5em .5em rgba(10, 102, 194, .5);
+    }
+    .github:nth-of-type(3):hover {
+        background-color: white;
+        color: black;
+        box-shadow: 0em .5em .5em rgba(255, 255, 255, .25);
+    }
+    .discord:nth-of-type(4):hover {
+        background-color: #6a80ca;
+        border: 1px solid #6a80ca;
+        box-shadow: 0em .5em .5em rgba(106, 128, 202, .5);
+    }
+    .instagram:nth-of-type(5):hover {
+        background: #f09433;
+        background: -moz-linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
+        background: -webkit-linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
+        background: linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
+        filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#f09433', endColorstr='#bc1888', GradientType=1);
+        border: none;
+        box-shadow: 0em .5em .5em rgba(220, 39, 67, .25);
+    }
+    .twitch:nth-of-type(6):hover {
+        border: #9147ff;
+        background-color: #9147ff;
+        box-shadow: 0em .5em .5em rgba(145, 71, 255, .5);
+    }
+}
+
 @media (min-width: 1000px) {
     .ver {
         flex-direction: column;
         flex-wrap: wrap;
+        padding: 1rem;
+        height: 100vh;
     }
     .profile {
-        height: 25rem;
-        width: 22rem;
-        height: 100vh;
-        padding: 25vh 0;
-        width: 35vw;
+        height: 46vh;
+        width: 25vw;
+        margin: 25vh 0vw 25vh 0vh;
     }
     .bio {
         visibility: visible;
         height: 15vh;
-        width: 65vw;
+        width: 60vw;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -383,13 +378,102 @@ h3 {
         height: 80vh;
     }
     .app {
-        width: 250px;
-        height: 1.5rem;
+        height: 23vh;
+        width: 28vw;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        padding: 0vh 0vw;
+        text-align: center;
     }
     .icon {
-        font-size: 1.2em;
+        font-size: 2em;
+        width: 6vw;
+        height: fit-content;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        height: 6vh;
     }
     .website {
         font-size: 1.2em;
+        height: fit-content;
+        width: 22vw;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        height: 6vh;
+    }
+    .dropdown {
+        background: url("./images/linkedin-background.jpeg");
+        background-repeat: no-repeat;
+        background-size: contain;
+        height: 14vh;
+        width: 28vw;
+        display: block;
+        background-color: white;
+        border-bottom-left-radius: .5rem;
+        border-bottom-right-radius: .5rem;
+        padding-top: 3vh;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+    }
+    .linkimgprof {
+        border-radius: 50%;
+        height: 9vh;
+        margin-left: 1.25vw;
+    }
+    .cvlink {
+        text-decoration: none;
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: last baseline;
+        flex-wrap: nowrap;
+        padding: 3vh 0;
+        width: 100vw;
+        text-align: left;
+        font-size: 1.15rem;
+    }
+    .envelope:nth-of-type(1) {
+        background-color: white;
+        color: black;
+        box-shadow: 0em .5em .5em rgba(255, 255, 255, .25);
+    }
+    .linkedin:nth-of-type(2) {
+        background-color: #0a66c2;
+        color: white;
+        border: #0a66c2;
+    }
+    .github:nth-of-type(3) {
+        background-color: white;
+        color: black;
+    }
+    .discord:nth-of-type(4) {
+        background-color: #6a80ca;
+        border: 1px solid #6a80ca;
+    }
+    .instagram:nth-of-type(5) {
+        background: #f09433;
+        background: -moz-linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
+        background: -webkit-linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
+        background: linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
+        filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#f09433', endColorstr='#bc1888', GradientType=1);
+        border: none;
+    }
+    .twitch:nth-of-type(6) {
+        border: #9147ff;
+        background-color: #9147ff;
+    }
+    .profile:hover {
+        background: #f09433;
+        background: -moz-linear-gradient(45deg, rgb(36, 24, 88) 0%, #0a66c2 100%);
+        background: -webkit-linear-gradient(45deg, rgb(24, 24, 88) 0%, #0a66c2 100%);
+        background: linear-gradient(45deg, rgb(24, 24, 88) 0%, #0a66c2 100%);
+        color: white;
+        border-radius: 2rem;
+        transform: translateY(-.4vh);
+        margin-bottom: .5em;
+        box-shadow: 0em .5em .5em rgba(10, 102, 194, .25);
     }
 }
