Fixed missing meta tag

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -20,7 +20,7 @@
     <meta property="og:description" content="I am a graduate software engineering student who has a passion for product design and its innovation. I work well with people who are passionate about advancing consumer products and pushing for increased access to essential technologies for lower and
     middle-income communities" />
     <meta property="og:url" content="https://www.acmahaja.com/" />
-    <meta property="og:image" content="https://raw.githubusercontent.com/acmahaja/acmahaja.github.io/main/images/avatar.png" />
+    <meta property="og:image" content="./images/avatar.png" />
 
     <meta property="og:locale" content="en_US" />
 
