--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -7,13 +7,124 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>acmahaja</title>
     <link rel="stylesheet" href="/css/index.css">
+
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+
+
+    <meta property="og:title" content="Portfolio site for @acmahaja" />
+    <meta property="og:description" content="I am a graduate software engineering student who has a passion for product design and its innovation. I work well with people who are passionate about advancing consumer products and pushing for increased access to essential technologies for lower and
+            middle-income communities" />
+    <meta property="og:url" content="https://www.acmahaja.com/" />
+    <meta property="og:image" content="./images/profile.png" />
+
 </head>
 
 <body>
-    <div class="main">
-        <div class="ver">
-            <div class="hor">
+    <nav>
+        <a class="link">Home</a>
+        <div class="links">
+            <div class="link"><a class="link">Github</a></div>
+            <div class="link"><a class="link">Projects</a></div>
+            <div class="link"><a class="link">CV 🔗</a></div>
 
+        </div>
+    </nav>
+    <div class="ver">
+        <div class="hor">
+            <div class="bio">
+                <div class="profile">
+                    <img src="/images/profile.png" alt="profile pic">
+                    <h1 class="name">Anjaney C Mahajan</h1>
+                    <h3 class="username">@acmahaja</h3>
+                </div>
+                <div class="descr">
+                    I am a graduate computer engineering student who has a passion for product design and its innovation. I work well with people who are passionate about advancing consumer products and pushing for increased access to essential technologies for lower and
+                    middle-income communities
+                </div>
+            </div>
+            <div class="websites">
+                <div class="website email grid-item">
+                    <div class="banner">
+                        <em class="fas fa-envelope"></em>
+                        <div class="center">
+                            <h4>acmahaja@gmail.com</h4>
+                        </div>
+                    </div>
+                    <div class="web-content">
+                        <form action="mailto:acmahaja@gmail.com" method="post">
+                            <div class="email-form">
+                                <label for="name">Name:</label>
+                                <input type="text" name="name" class="name">
+                            </div>
+                            <div class="email-form">
+                                <label for="name">Email:</label>
+                                <input type="text" name="mail" class="mail">
+
+                            </div>
+                            <div class="email-form">
+                                <label for="name">Comment:</label>
+                                <input type="text" name="comment" id="comment">
+                            </div>
+                            <div class="email-button">
+                                <input type="submit" value="Send">
+                                <input type="reset" value="Reset">
+                            </div>
+                        </form>
+                    </div>
+                </div>
+                <div class="website linkedin grid-item">
+                    <div class="banner">
+                        <em class="fab fa-linkedin  "></em>
+                        <div class="center">
+                            <h4>/ln/linkedin</h4>
+                        </div>
+                    </div>
+                    <div class="web-content">
+
+                    </div>
+                </div>
+                <div class="website github grid-item">
+                    <div class="banner">
+                        <em class="fab fa-github  "></em>
+                        <div class="center">
+                            <h4>/acmahaja</h4>
+                        </div>
+                    </div>
+                    <div class="web-content">
+                    </div>
+                </div>
+                <div class="website discord grid-item">
+                    <div class="banner">
+                        <em class="fab fa-discord  "></em>
+                        <div class="center">
+                            <h4>acmahaja#0052</h4>
+                        </div>
+                    </div>
+                    <div class="web-content">
+
+                    </div>
+                </div>
+                <div class="website instagram grid-item">
+                    <div class="banner">
+                        <em class="fab fa-instagram  "></em>
+                        <div class="center">
+                            <h4>@acmahaja</h4>
+                        </div>
+                    </div>
+                    <div class="web-content">
+                    </div>
+                </div>
+                <div class="website medium grid-item">
+                    <div class="banner">
+                        <em class="fab fa-medium  "></em>
+                        <div class="center">
+                            <h4>/@acmahaja</h4>
+                        </div>
+                    </div>
+                    <div class="web-content">
+                    </div>
+                </div>
             </div>
         </div>
     </div>
