removed extra code and added nicer styling

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,63 +1,3 @@
-<<<<<<< Updated upstream
-<%- include('../partials/header.ejs')-%>
-
-
-    <body>
-        <div class="hor animate__animated animate__backInDown">
-            <div class="ver">
-                <div class="profile">
-                    <img src="./images/avatar.png" alt=" Profile Picture " class=" profilePicture ">
-                    <h1 class="font-weight-bold ">Anjaney C Mahajan</h1>
-                    <h3 class="font-weight-bold ">@acmahaja</h3>
-                </div>
-
-                <div class="bio">
-
-                    <p>
-                        I am a graduate software engineering student who has a passion for product design and its innovation. I work well with people who are passionate about advancing consumer products and pushing for increased access to essential technologies for lower and
-                        middle-income communities
-
-                    </p>
-                </div>
-                <div class="apps">
-                    <div class="app envelope" ondclick="redirect(this)">
-                        <div class="icon"><i class="fa fa-envelope"></i></div>
-                        <div class="website">
-                            acmahaja@gmail.com
-                        </div>
-                    </div>
-                    <div id="linkedin" class="app linkedin" onclick="redirect(this)">
-                        <div class="icon linkedin"><i class="fab fa-linkedin"></i></div>
-                        <div class="website">
-                            /in/acmahaja </div>
-                    </div>
-                    <div class="app github" onclick="redirect(this)">
-                        <div class="icon"><i class="fab fa-github"></i></div>
-                        <div class="website">
-                            /acmahaja </div>
-                    </div>
-                    <div class="app discord" onclick="redirect(this)">
-                        <div class="icon"><i class="fab fa-discord" aria-hidden="true"></i></div>
-                        <div class="website">
-                            acmahaja#0052 </div>
-                    </div>
-                    <div class="app instagram" onclick="redirect(this)">
-                        <div class="icon"><i class="fab fa-instagram"></i></div>
-                        <div class="website">
-                            @acmahaja </div>
-                    </div>
-                    <div class="app twitch" onclick="redirect(this)">
-                        <div class="icon"><i class="fab fa-twitch"></i></div>
-                        <div class="website">
-                            tv/acmahaja </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <script src="./script.js"></script>
-
-        <%- include('../partials/bottom.ejs')-%>
-=======
 <!DOCTYPE html>
 <html lang="en">
 
@@ -84,7 +24,7 @@
                 <div class="text-center m-2 text-lg">@acmahaja</div>
             </div>
         </div>
-        <div class="flex flex-col items-center justify-evenly ju w-full h-2/3 font-medium	click">
+        <div class="flex flex-col items-center justify-evenly ju w-full h-2/3 font-medium text-lg click">
             <div class="envelope container p-2 border-2 border-white rounded-lg w-4/5 flex justify-between
                         transition duration-150 ease-in-out hover:bg-white hover:border-transparent hover:text-black transform hover:-translate-y-1.5 hover:scale-103
             " onclick="redirect(this)">
@@ -158,4 +98,3 @@
 </body>
 
 </html>
->>>>>>> Stashed changes
