--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,5 +1,9 @@
 body{
     background-color: rgb(19, 25, 37);
+    width: 100%;
+    height: 100vh;
+    margin: 0;
+    padding: 0;
 }
 
 .profile-img{
@@ -28,5 +32,4 @@ body{
     background: linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
     filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#f09433', endColorstr='#bc1888', GradientType=1);
     border: none;
-    box-shadow: 0em .5em .5em rgba(220, 39, 67, .25);
 }
