--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 html,
 body {
   margin: 0em;
@@ -5,31 +7,47 @@ body {
 }
 
 html {
-  background-color: #0f172a;
+  background-color: #090f1a;
   background-image: linear-gradient(
       to bottom,
-      rgba(0, 0, 0, 0.5),
-      rgba(141, 141, 141, 0.05)
+      rgba(0, 0, 0, 0),
+      rgba(0, 0, 0, 0)
     ),
     url("../images/grid.png");
   background-repeat: repeat;
-  background-size: 500px auto;
+  background-size: 650px auto;
+  width: 100vw;
+  min-height: 100vh;
+  overflow: hidden;
+  box-shadow: inset 0px 0px 50px 50px #090f1a;
 }
 
 body {
-  box-shadow: inset 0px 0px 50px 50px #0f172a;
+  width: 100%;
+  min-height: 100vh;
+  overflow: hidden;
+}
+
+#root {
+  width: 100%;
+  min-height: 100%;
   overflow: hidden;
 }
 
 .App {
-  width: 100px;
-  height: 1000px;
-  overflow-y:hidden;
-
+  width: 100%;
+  min-height: 100vh;
+  overflow: hidden;
+  padding: 5em 10em;
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  -o-box-sizing: border-box;
 }
 
 .cloudBlur {
-  position: absolute;
+  position: fixed;
   top: -25vw;
   left: 40vh;
   width: 100vw;
@@ -37,4 +55,54 @@ body {
   background-image: url("../images/Coloured-Cloud.png");
   background-size: cover;
   background-position: 0;
+  z-index: -1;
+}
+
+.App h2 {
+  font-family: "Raleway", sans-serif;
+  font-size: 39px;
+  font-weight: 500;
+  line-height: 46px;
+  letter-spacing: 0.1em;
+  text-align: left;
+  color: white;
+}
+
+.App h1 {
+  font-family: "Raleway", sans-serif;
+  font-size: 105px;
+  font-weight: 700;
+  line-height: 123px;
+  letter-spacing: 0.1em;
+  text-align: left;
+  color: white;
+}
+
+.App p{
+  font-family: "Raleway", sans-serif;
+  font-size: 25px;
+  font-weight: 600;
+  line-height: 29px;
+  letter-spacing: 0.1em;
+  text-align: left;
+  color: white;
+}
+
+
+.App p span{
+    margin-left: .35em;
+}
+
+.App a {
+    text-decoration: none;
+    color: white;
+}
+
+.App p span:hover{
+    color: #38BDF8;
+}
+
+.App p span{
+  display: inline-flex;
+  align-items: center;
 }
