--- a/src/css/App.css
+++ b/src/css/App.css
@@ -118,13 +118,38 @@ body {
 
   }
   .App h1 {
-    font-size: 100px;
+    font-size: 4em;
     line-height: 120px;
 
   }
 
   .App p {
     line-height: 50px;
+    position: fixed;
+    bottom: 5em;
+  }
+}
+
+
+@media only screen and (max-width: 425px) {
+  .App {
+    padding: 3em;
+  }
+
+  .App h2 {
+    font-size: 1.5em;
+    line-height: 50px;
+
+  }
+  .App h1 {
+    font-size: 3.25em;
+    line-height: 2em;
+
+  }
+
+  .App p {
+    font-size: 1.5em;
+    line-height: 2em;
     position: fixed;
     bottom: 5em;
   }
