--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -1,4 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@500;700;900&family=Roboto+Mono:wght@500&display=swap');
+:root{
+    --theme-color: 240,240,240;
+}
+
 .App {
     width: 100vw;
     height: 100vh;
+    
 }
