--- a/client/src/css/Light.css
+++ b/client/src/css/Light.css
@@ -1,3 +1,10 @@
-.App.Light {
+.Light {
     background-color: white;
 }
+
+
+.Light header {
+    background: rgba(255, 255, 255, 0.8);
+    border-bottom-color: #e6e6e6;
+}
+
