Updated nav links for light and dark mode

--- a/client/src/css/Dark.css
+++ b/client/src/css/Dark.css
@@ -11,3 +11,15 @@
     
 }
 
+
+.Dark nav a.Logo {
+    color: white !important;
+}
+
+.Dark nav a {
+    color: white;
+}
+
+.Dark nav a.active {
+    color: white;
+}
