--- a/client/src/css/Light.css
+++ b/client/src/css/Light.css
@@ -6,5 +6,17 @@
 .Light header {
     background: rgba(255, 255, 255, 0.8);
     border-bottom-color: #e6e6e6;
+    
 }
 
+.Light nav a.Logo {
+    color: black !important;
+}
+
+.Light nav a {
+    color: black;
+}
+
+.Light nav a.active {
+    color: white;
+}
