--- a/client/src/css/Navbar.css
+++ b/client/src/css/Navbar.css
@@ -2,10 +2,11 @@ header {
   width: 100%;
   height: 72px;
   border-bottom: 4px solid;
-  z-index: -1;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  align-items: center;
+  position: absolute;
 }
 
 header .Highlight {
@@ -44,7 +45,7 @@ nav a {
   align-items: center;
 }
 
-nav a.Logo {
+nav a#Logo {
   font-family: "Raleway", sans-serif;
   font-style: normal;
   font-weight: 700;
@@ -52,7 +53,7 @@ nav a.Logo {
   line-height: 26px;
 }
 
-.Logo span {
+#Logo span {
   font-family: "Raleway";
   font-style: normal;
   font-weight: 900;
@@ -75,10 +76,10 @@ nav a.Logo {
 }
 
 nav ul {
-  width: 425px;
+  width: 500px;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
 }
 
@@ -90,31 +91,23 @@ nav ul a {
   font-size: 16px;
   line-height: 21px;
   letter-spacing: 0.025em;
+  padding: 7px 10px;
 }
 
 nav ul a.active {
-  background: #303030;
-  padding: 5px 10px;
   border-radius: 5px;
-  box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -ms-box-sizing: border-box;
-  -o-box-sizing: border-box;
 }
 
 nav ul a:hover {
-  background: rgb(var(--theme-color));
+  background-color: rgba(var(--theme-color), 1);
   color: white;
-  border-radius: 5px;
-  outline: solid 8px rgb(var(--theme-color));
-  box-sizing: border-box;
 }
 
 nav ul a.active:hover {
-  background: #303030;
-  padding: 5px 10px;
-  border-radius: 5px;
-  outline: solid 3px rgb(var(--theme-color));
-  background: rgb(var(--theme-color));
+  background-color: rgba(var(--theme-color), 1);
+  color: white;
+}
+
+#settingsIcon {
+  margin-left: 10px;
 }
