--- a/client/src/css/Light.css
+++ b/client/src/css/Light.css
@@ -1,28 +1,44 @@
 .Light {
-    background-color: white;
+  background-color: white;
 }
 
-
 .Light header {
-    background: #FEFEFE;
-    border-bottom-color: #e6e6e6;
-    
+  background: #f6f8ff;
+  border-bottom-color: #e6e6e6;
 }
 
 .Light nav a#Logo {
-    color: black !important;
-    background: none;
+  color: black !important;
+  background: none;
 }
 
 .Light nav a {
-    color: #616161;
+  color: #616161;
 }
 
 .Light nav a.active {
-    color: white;
-    background: #616161;
+  color: white;
+  background: #616161;
 }
 
 .Light #settingsIcon {
-    color: #616161;
+  color: #616161;
+}
+.Light #settings {
+  background-color: #f6f8ff;
+  outline: 2px solid #e6e6e6;
+  box-shadow: 0 16px 30px -10px rgba(70, 96, 187, 0.2);
+}
+
+.Light #settings h5 {
+  color: #616161;
+  font-weight: 500;
+}
+
+.Light #toggle-switch span {
+    color: #616161 !important;
+}
+
+.Light #settingsIcon:hover {
+  color: white !important;
 }
