--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -45,6 +45,13 @@
 }
 
 @media only screen and (max-width: 600px) {
+  .Home {
+    width: 90%;
+    height: fit-content;
+    padding: 35px;
+
+  }
+
 
   .Home > h2 {
     font-size: 15px;
